@@ -273,6 +273,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP470  (EXPERIMENTAL)
        Canon PIXMA MP490  (EXPERIMENTAL)
        Canon PIXMA MP530  (EXPERIMENTAL)
+       Canon PIXMA MP900  (EXPERIMENTAL)
 
      - Epson inkjet printers:
 
